code25_all/scala/14885066.txt
scala> def myouter() = {
     |   def myInner() {
     |     println("In inner now")
     |   }
     |   this
     | }
myouter: ()type

scala> myouter().myInner()
    <console>:9: error: value myInner is not a member of object $iw
          myouter().myInner()
                    ^

